--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rust:
   - beta
   - nightly
 env: RUN=BUILD
-before_script: rustup target add thumbv7em-none-eabihf
+before_script: rustup target add thumbv7m-none-eabi
 script: cargo build
 matrix:
   include:
